[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/crafting/SpellRow.gd" type="Script" id=1]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -819.0
margin_bottom = -551.0
rect_min_size = Vector2( 220, 25 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 220.0
margin_bottom = 25.0

[node name="OptionButton" type="OptionButton" parent="HBoxContainer"]
margin_right = 29.0
margin_bottom = 25.0

[node name="SpellName" type="Label" parent="HBoxContainer"]
margin_left = 33.0
margin_top = 5.0
margin_right = 220.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Spell name"

[connection signal="item_selected" from="HBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
